--- a/css/style.css
+++ b/css/style.css
@@ -113,12 +113,17 @@ body {
     justify-content: center;
 }
 
+.custom-card:hover {
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+
 .custom-card {
     width: 300px;
     border: none;
     border-radius: 10px;
     overflow: hidden;
     text-align: left;
+    transition: cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .custom-card img {
@@ -277,6 +282,10 @@ body {
     margin-top: 81px;
 }
 
+.footer-image {
+    width: 300px;
+}
+
 @media (max-width: 728px) {
     .splide__arrow--next {
         display: none !important;
@@ -288,6 +297,79 @@ body {
         margin-top: 3px !important;
     }
 }
+
+@media (max-width: 401px) {
+    .footer-email {
+        padding-left: unset !important;
+        font-size: 20px !important;
+    }
+
+    .footer-address {
+        padding-left: unset !important;
+        font-size: 15px !important;
+    }
+
+    .footer-address span {
+        padding-left: unset !important;
+    }
+
+    .icons {
+        padding-left: unset !important;
+    }
+
+    .footer-image {
+        padding-top: unset !important;
+        margin-top: unset !important;
+    }
+
+    .footer-heading {
+        padding-top: 2px !important;
+        margin-top: 2px !important;
+        padding-left: unset !important;
+        font-size: 30px !important;
+    }
+
+    .navbar-brand {
+        font-size: medium !important;
+    }
+
+    .navbar {
+        padding: unset !important;
+    }
+
+    .navbar-toggler {
+        padding: unset !important;
+        font-size: unset !important;
+    }
+}
+
+@media (max-width: 620px) {
+    .footer-email {
+        width: 10px !important;
+    }
+}
+
+@media (max-width: 300px) {
+    .footer-image {
+        width: 200px !important;
+    }
+
+    .btn-success {
+        width: 200px !important;
+    }
+
+    .navbar {
+        padding: unset !important;
+    }
+
+    .navbar-toggler {
+        padding: unset !important;
+        font-size: unset !important;
+        line-height: unset !important;
+    }
+}
+
+
 
 #skill_splide .splide__pagination {
     display: none !important;
